# smolVAE

./: .gitignore  README.md  jax_vae.py  keras_vae.py  pyproject.toml  torch_vae.py
scripts/: setup_envs.sh
